--- a/css/main.css
+++ b/css/main.css
@@ -339,6 +339,9 @@ input[type="radio"]:hover:after {
   border: 1px solid darkgray;
 }
 
+.sg-linked-img {
+  margin-bottom: 2rem;
+}
 
 .element .box { /* Hover over Image Link in Style Guide */
   width: 30%;
@@ -359,7 +362,7 @@ input[type="radio"]:hover:after {
 }
 
 .img-hover-box {
-  opacity: 0.5;
+  opacity: 1;
   transition: 0.5s ease;
   position: absolute;
   top: 50%;
@@ -1156,8 +1159,8 @@ table {
   font-size: 150%;
 }
 
-.box:hover{
-  margin-top: -2vw;
+.box:hover {
+  margin-top: -1vw; /* -2vw; */
 }
 
 .image-link-container {
