Add vendor prefix for radio buttons

--- a/css/main.css
+++ b/css/main.css
@@ -312,7 +312,13 @@ input[type="text"]:focus {
 input[type="radio"]:after {
   width: 1.15rem;
   height: 1.15rem;
+  -webkit-top: -3px;
+  -moz-top: -3px;
+  -ms-top: -3px;
   top: -3px;
+  -webkit-left: -3px;
+  -moz-left: -3px;
+  -ms-left: -3px;
   left: -3px;
   position: relative;
   background-color: #FFF;
@@ -325,7 +331,13 @@ input[type="radio"]:after {
 input[type="radio"]:checked:after {
   width: 1.15rem;
   height: 1.15rem;
+  -webkit-top: -3px;
+  -moz-top: -3px;
+  -ms-top: -3px;
   top: -3px;
+  -webkit-left: -3px;
+  -moz-left: -3px;
+  -ms-left: -3px;
   left: -3px;
   position: relative;
   background-color: #000;
