--- a/css/main.css
+++ b/css/main.css
@@ -1220,6 +1220,7 @@ background: #A9AD9D;
   margin-top: 100px;
   font-size: 1.2rem;
   line-height: 2vw;
+  margin-bottom: 5vw;
 }
 
 .article-image img {
